fix(mobile): fix slider layout issue
Slider width need to set margin value and Slider value can use integer value

--- a/tau/src/css/profile/mobile/changeable/common/slider.less
+++ b/tau/src/css/profile/mobile/changeable/common/slider.less
@@ -41,8 +41,8 @@
 		}
 	}
 	&.ui-slider-horizontal {
-		width: 100%;
 		height: 8 * @unit_base;
+		margin: 20 * @unit_base 32 * @unit_base;
 		.ui-slider-value {
 			height: 8 * @unit_base;
 		}
@@ -68,7 +68,7 @@
 		}
 	}
 	&.ui-slider-vertical {
-		height: 100%;
+		height: 80%;
 		width: 8 * @unit_base;
 		display: inline-block;
 		float: left;
